--- a/index.html
+++ b/index.html
@@ -17,24 +17,15 @@
 <body>
   <section class="clearfix">
     <div class="content">
-      <div class="btn">
-        <a href="#" class="back"><img src="../blockchain/images/btn-back-normal.svg"></a>
-      </div>
       <div class="title">
-        <h2>Dapp Name 001</h2>
-        <button class="title-btn">수정</button>
-      </div>
-      <div class="information">
-        <span>제작자:arlee@postech.ac.kr
-          <button class="small-btn">웹사이트</button>
-        </span>
-        <span>등록일:2018-03-20</span>
-        <span>최종수정일:2018-03-20</span>
-        <span>어드레스:0x758......000</span>
-        <span>검수 정보:검수 완료</span>
-        <span>DApp소스
-          <button class="small-btn">다운로드</button>
-        </span>
+        <div class="btn">
+          <a href="#" class="back"><img src="../blockchain/images/btn-back-normal.svg"></a>
+        </div>
+        <h2 class="title-in">Dapp Name 001</h2>
+        <div>
+          <button class="title-btn">계정삭제</button>
+          <button class="title-btn">수정</button>
+        </div>
       </div>
       <div class="app">
         <p class="app-tit">앱 설명</p>
@@ -50,7 +41,66 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
           est
           laborum.</p>
-        <div class="app-image"></div>
+      </div>
+      <div class="clearfix entire">
+        <div class="info col-d-4">
+          <p class="info-name">제작자</p>
+          <input type="email" placeholder="arlee@postech.ac.kr">
+        </div>
+        <div class="info col-d-4">
+          <p class="info-name">어드레스</p>
+          <input type="email" placeholder="0x75887cvb5d8v56n7ef000">
+        </div>
+        <div class="info col-d-4">
+          <p class="info-name">웹사이트</p>
+          <input type="email" placeholder="http://www.arlee.com">
+        </div>
+      </div>
+      <div class="clearfix entire2">
+        <div class="info col-d-4">
+          <p class="info-name">이미지</p>
+          <div class="info-in">
+            <p><span><img src="../blockchain_6/images/ic-list.svg"></span>arlee.png (600KB)</p>
+            <button class="small-btn">업로드</button>
+          </div>
+        </div>
+        <div class="info col-d-4">
+          <p class="info-name">DApp</p>
+          <div class="info-in">
+            <p><span><img src="../blockchain_6/images/ic-list.svg"></span>arlee.png (600KB)</p>
+            <button class="small-btn">업로드</button>
+          </div>
+        </div>
+      </div>
+      <div class="history">
+        <h2 class="history-title">히스토리</h2>
+        <table class="history-table">
+          <tbody>
+            <tr>
+              <th>번호</th>
+              <th>수정일시</th>
+              <th>수정내역</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>2018-06-01 09:00</td>
+              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>2018-06-01 09:00</td>
+              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>2018-06-01 09:00</td>
+              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </section>
