DApp Management_07 초기 커밋

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
 <body>
   <section class="clearfix">
     <div class="content">
-      <div class="title">
-        <div class="btn">
-          <a href="#" class="back"><img src="../blockchain/images/btn-back-normal.svg"></a>
+      <div class="title-wrong">
+        <div class="title">
+          <div class="btn">
+            <a href="#" class="back"><img src="../blockchain/images/btn-back-normal.svg"></a>
+          </div>
+          <h2 class="title-in">Dapp Name 001</h2>
+          <div>
+            <button class="title-btn">계정삭제</button>
+            <button class="title-btn">수정</button>
+          </div>
         </div>
-        <h2 class="title-in">Dapp Name 001</h2>
-        <div>
-          <button class="title-btn">계정삭제</button>
-          <button class="title-btn">수정</button>
-        </div>
+        <p class="wrong">사용할 수 없는 DApp 이름입니다.</p>
       </div>
       <div class="app">
         <p class="app-tit">앱 설명</p>
@@ -63,6 +66,7 @@
             <p><span><img src="../blockchain_6/images/ic-list.svg"></span>arlee.png (600KB)</p>
             <button class="small-btn">업로드</button>
           </div>
+          <p class="wrong">이미지를 다시 업로드 하세요.</p>
         </div>
         <div class="info col-d-4">
           <p class="info-name">DApp</p>
