--- a/index.html
+++ b/index.html
@@ -18,93 +18,46 @@
   <section class="clearfix">
     <div class="content">
       <div class="title-wrong">
+        <h2 class="dapp-name">DApp이름</h2>
         <div class="title">
           <div class="btn">
             <a href="#" class="back"><img src="../blockchain/images/btn-back-normal.svg"></a>
           </div>
-          <h2 class="title-in">Dapp Name 001</h2>
-          <div>
-            <button class="title-btn">계정삭제</button>
-            <button class="title-btn">수정</button>
+          <h2 class="title-in"></h2>
+          <div class="title-btn-div">
+            <button class="title-btn">등록</button>
           </div>
         </div>
-        <p class="wrong">사용할 수 없는 DApp 이름입니다.</p>
       </div>
       <div class="app">
         <p class="app-tit">앱 설명</p>
-        <p class="app-in">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.<br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
+        <p class="app-in"></p>
       </div>
       <div class="clearfix entire">
         <div class="info col-d-4">
           <p class="info-name">제작자</p>
-          <input type="email" placeholder="arlee@postech.ac.kr">
-        </div>
-        <div class="info col-d-4">
-          <p class="info-name">어드레스</p>
-          <input type="email" placeholder="0x75887cvb5d8v56n7ef000">
+          <input type="email">
         </div>
         <div class="info col-d-4">
           <p class="info-name">웹사이트</p>
-          <input type="email" placeholder="http://www.arlee.com">
+          <input type="email">
         </div>
       </div>
       <div class="clearfix entire2">
         <div class="info col-d-4">
           <p class="info-name">이미지</p>
           <div class="info-in">
-            <p><span><img src="../blockchain_6/images/ic-list.svg"></span>arlee.png (600KB)</p>
+            <p><span><img src="../blockchain_6/images/ic-list.svg"></span></p>
             <button class="small-btn">업로드</button>
           </div>
-          <p class="wrong">이미지를 다시 업로드 하세요.</p>
         </div>
         <div class="info col-d-4">
           <p class="info-name">DApp</p>
           <div class="info-in">
-            <p><span><img src="../blockchain_6/images/ic-list.svg"></span>arlee.png (600KB)</p>
+            <p><span><img src="../blockchain_6/images/ic-list.svg"></span></p>
             <button class="small-btn">업로드</button>
           </div>
         </div>
-      </div>
-      <div class="history">
-        <h2 class="history-title">히스토리</h2>
-        <table class="history-table">
-          <tbody>
-            <tr>
-              <th>번호</th>
-              <th>수정일시</th>
-              <th>수정내역</th>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>2018-06-01 09:00</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. </td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>2018-06-01 09:00</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. </td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>2018-06-01 09:00</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. </td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </div>
   </section>
