--- a/system02.html
+++ b/system02.html
@@ -25,7 +25,7 @@
       </div>
       <div class="info-table-s2">
         <h3>기본 정보</h3>
-        <table>
+        <table class="tb-s2">
           <tbody>
             <tr>
               <th>번호</th>
