디테일 수정 commit

--- a/dapp08.html
+++ b/dapp08.html
@@ -23,7 +23,7 @@
           <div class="btn8">
             <a href="#" class="back8"><img src="./images/btn-back-normal.svg"></a>
           </div>
-          <h2 class="title-in8"></h2>
+          <input class="title-in8">
           <div class="title-btn-div8">
             <button class="title-btn8">등록</button>
           </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="app8">
         <p class="app-tit8">앱 설명</p>
-        <p class="app-in8"></p>
+        <textarea class="app-in8"></textarea>
       </div>
       <div class="clearfix entire8">
         <div class="info8 col-d-4">
