--- a/voting03.html
+++ b/voting03.html
@@ -26,8 +26,6 @@
         <p class="title-sub-v3">*투표는 모바일 앱을 통해서만 가능합니다.</p>
       </div>
       <div class="information-v3">
-        <span>제작자:arlee@postech.ac.kr
-        </span>
         <span>투표 대상: 전체</span>
         <span>투표 기간: 2018년 4월 30일 00:00 ~ 2018년 5월 05일 00:00</span>
         <span>상태: 마감</span>
@@ -39,10 +37,13 @@
       </div>
       <div class="information2-v3">
         <span>투표 종료 기준:</span>
-        <input type="radio" id="radio1-v3">
-        <label for="radio1-v3">일시</label>
-        <input type="radio" id="radio2-v3">
-        <label for="radio2-v3">사람 수</label>
+        <!--radio-->
+        <span class="radio">
+          <input type="radio" name="radio-endCondition" id="radio1-v3">
+          <label for="radio1-v3">일시</label>
+          <input type="radio" name="radio-endCondition" id="radio2-v3">
+          <label for="radio2-v3">사람 수</label>
+        </span>
       </div>
       <div class="vote-v3 clearfix">
         <p class="vote-tit-v3">투표 현황</p>
