--- a/dapp06.html
+++ b/dapp06.html
@@ -21,7 +21,7 @@
         <div class="btn6">
           <a href="#" class="back6"><img src="./images/btn-back-normal.svg"></a>
         </div>
-        <h2 class="title-in6">Dapp Name 001</h2>
+        <input type="text" class="title-in6" value="DApp Name 001">
         <div>
           <button class="title-btn6">계정삭제</button>
           <button class="title-btn6">수정</button>
@@ -29,31 +29,20 @@
       </div>
       <div class="app6">
         <p class="app-tit6">앱 설명</p>
-        <p class="app-in6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.<br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
+        <textarea type="text" class="app-in6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
       </div>
       <div class="clearfix entire6">
         <div class="info6 col-d-4">
           <p class="info-name6">제작자</p>
-          <input type="email" placeholder="arlee@postech.ac.kr">
+          <input type="email" value="arlee@postech.ac.kr">
         </div>
         <div class="info6 col-d-4">
           <p class="info-name6">어드레스</p>
-          <input type="email" placeholder="0x75887cvb5d8v56n7ef000">
+          <input type="email" value="0x75887cvb5d8v56n7ef000">
         </div>
         <div class="info6 col-d-4">
           <p class="info-name6">웹사이트</p>
-          <input type="email" placeholder="http://www.arlee.com">
+          <input type="email" value="http://www.arlee.com">
         </div>
       </div>
       <div class="clearfix entire2-6">
@@ -82,7 +71,7 @@
               <th>수정내역</th>
             </tr>
             <tr>
-              <td>1</td>
+              <td>3</td>
               <td>2018-06-01 09:00</td>
               <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </td>
@@ -94,7 +83,7 @@
                 et dolore magna aliqua. </td>
             </tr>
             <tr>
-              <td>3</td>
+              <td>1</td>
               <td>2018-06-01 09:00</td>
               <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </td>
