--- a/dapp07.html
+++ b/dapp07.html
@@ -17,62 +17,49 @@
 <body>
   <section class="all-rel">
     <div class="content7">
-      <div class="title-wrong7">
-        <div class="title7">
-          <div class="btn7">
-            <a href="#" class="back7"><img src="./images/btn-back-normal.svg"></a>
-          </div>
-          <h2 class="title-in7">Dapp Name 001</h2>
-          <div>
-            <button class="title-btn7">계정삭제</button>
-            <button class="title-btn7">수정</button>
-          </div>
+      <div class="title7">
+        <div class="btn7">
+          <a href="#" class="back7"><img src="./images/btn-back-normal.svg"></a>
         </div>
-        <p class="wrong7">사용할 수 없는 DApp 이름입니다.</p>
-      </div>
-      <div class="app7">
-        <p class="app-tit7">앱 설명</p>
-        <p class="app-in7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.<br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
-      </div>
-      <div class="clearfix entire7">
-        <div class="info7 col-d-4">
-          <p class="info-name7">제작자</p>
-          <input type="email" placeholder="arlee@postech.ac.kr">
-        </div>
-        <div class="info7 col-d-4">
-          <p class="info-name7">어드레스</p>
-          <input type="email" placeholder="0x75887cvb5d8v56n7ef000">
-        </div>
-        <div class="info7 col-d-4">
-          <p class="info-name7">웹사이트</p>
-          <input type="email" placeholder="http://www.arlee.com">
+        <input type="text" class="title-in7" value="DApp Name 001">
+        <div class="bbtt">
+          <button class="title-btn7">계정삭제</button>
+          <button class="title-btn7">수정</button>
         </div>
       </div>
-      <div class="clearfix entire2-7">
-        <div class="info7 col-d-4">
-          <p class="info-name7">이미지</p>
-          <div class="info-in7">
+      <p class="wrong7">사용할 수 없는 DApp 이름입니다.</p>
+      <div class="app6">
+        <p class="app-tit6">앱 설명</p>
+        <textarea type="text" class="app-in6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+      </div>
+      <div class="clearfix entire6">
+        <div class="info6 col-d-4">
+          <p class="info-name6">제작자</p>
+          <input type="email" value="arlee@postech.ac.kr">
+        </div>
+        <div class="info6 col-d-4">
+          <p class="info-name6">어드레스</p>
+          <input type="email" value="0x75887cvb5d8v56n7ef000">
+        </div>
+        <div class="info6 col-d-4">
+          <p class="info-name6">웹사이트</p>
+          <input type="email" value="http://www.arlee.com">
+        </div>
+      </div>
+      <div class="clearfix entire2-6">
+        <div class="info6 col-d-4">
+          <p class="info-name6">이미지</p>
+          <div class="info-in6">
             <p><span><img src="./images/ic-list.svg"></span>arlee.png (600KB)</p>
-            <button class="small-btn7">업로드</button>
+            <button class="small-btn6">업로드</button>
           </div>
-          <p class="wrong7">이미지를 다시 업로드 하세요.</p>
+          <p class="wrong7-2">이미지를 다시 업로드 하세요.</p>
         </div>
-        <div class="info7 col-d-4">
-          <p class="info-name7">DApp</p>
-          <div class="info-in7">
+        <div class="info6 col-d-4">
+          <p class="info-name6">DApp</p>
+          <div class="info-in6">
             <p><span><img src="./images/ic-list.svg"></span>arlee.png (600KB)</p>
-            <button class="small-btn7">업로드</button>
+            <button class="small-btn6">업로드</button>
           </div>
         </div>
       </div>
@@ -86,7 +73,7 @@
               <th>수정내역</th>
             </tr>
             <tr>
-              <td>1</td>
+              <td>3</td>
               <td>2018-06-01 09:00</td>
               <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </td>
@@ -98,7 +85,7 @@
                 et dolore magna aliqua. </td>
             </tr>
             <tr>
-              <td>3</td>
+              <td>1</td>
               <td>2018-06-01 09:00</td>
               <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </td>
