job2,3 과 code2,3 완료 커밋

--- a/code03.html
+++ b/code03.html
@@ -22,48 +22,40 @@
           <a href="#" class="back-j2"><img src="./images/btn-back-normal.svg"></a>
         </div>
         <section class="title-j2">
-          <h2 class="title-in-j2">DApp 분류</h2>
+          <h2 class="title-in-j2">신규 코드 등록</h2>
           <button class="title-btn-j2">수정</button>
         </section>
       </li>
       <li>
-        <section class="basic-c2">
+        <section class="basic-c3">
           <h2>기본 정보</h2>
-          <p>상위 코드 경로: 전체 > DApp</p>
-          <p>
-            <span class="basic-in-c2">상위 코드명: DApp</span>
+          <p class="basic-up-c3">상위 코드 경로: 전체 > DApp</p>
+          <p class="basic-up2-c3">
+            <span class="basic-in-c3">상위 코드명: DApp</span>
             <span>상위 코드구분: 000000</span>
           </p>
-          <p>코드구분: 000000</p>
-          <p>정렬순서: 1</p>
+          <p class="basic-code1-c3">코드구분: <input type="text"></p>
+          <p class="basic-order-c3">정렬순서: <span class="basic-code2-c3">전체</span></p>
           <p>
-            <span class="basic-in-c2">코드명: 000000</span>
-            <span>코드값: 000000</span>
+            <span class="basic-in-c3">코드명: <input type="text"></span>
+            <span class="basic-code3-c3">코드값: <input type="text"></span>
           </p>
         </section>
       </li>
       <li>
-        <section class="explain-c2">
+        <section class="explain-c3">
           <h2>코드 설명</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
-          </p>
+          <textarea>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </textarea>
         </section>
       </li>
       <li>
-        <section class="extra-c2">
+        <section class="extra-c3">
           <h2>비고</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
-          </p>
+          <textarea>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </textarea>
         </section>
       </li>
       <li>
