--- a/job02.html
+++ b/job02.html
@@ -35,7 +35,7 @@
           </div>
           <div class="sch-j2">
             <span>스케쥴 유형</span>
-            <input type="radio" id="sch1" name="sch-radio">
+            <input type="radio" id="sch1" name="sch-radio" checked="checked">
             <label for="sch1">시간</label>
             <input type="radio" id="sch2" name="sch-radio">
             <label for="sch2">일간</label>
@@ -63,14 +63,14 @@
           <p class="detail-in2-j2">스크립트 파라미터: student</p>
           <div class="log-j2">
             <span>상세 로그 기록</span>
-            <input type="radio" id="log1" name="log-radio">
+            <input type="radio" id="log1" name="log-radio" checked="checked">
             <label for="log1">사용</label>
             <input type="radio" id="log2" name="log-radio">
             <label for="log2">미사용</label>
           </div>
           <div class="condition-j2">
             <span>상태</span>
-            <input type="radio" id="con1" name="con-radio">
+            <input type="radio" id="con1" name="con-radio" checked="checked">
             <label for="con1">운영</label>
             <input type="radio" id="con2" name="con-radio">
             <label for="con2">미운영</label>
