job2,3과 code2,3 수정 커밋

--- a/code02.html
+++ b/code02.html
@@ -79,10 +79,10 @@
             <span class="search-in-c2 search-text-c2">사용여부</span>
             <span class="search-text-c2">
               <input type="radio" id="search2" name="search2-radio" checked="checked">
-              <label for="search1">사용</label>
+              <label for="search2">사용</label>
             </span>
             <input type="radio" id="search2-1" name="search2-radio">
-            <label for="search1">미사용</label>
+            <label for="search2-1">미사용</label>
           </div>
           <p class="line-c2">최근 수정인: 이아란 / 운영팀 </p>
           <p>최근 수정일시: 2018-02-24</p>
