--- a/job02.html
+++ b/job02.html
@@ -47,11 +47,13 @@
             <label for="sch5">사용자</label>
           </div>
           <div class="cycle-j2">
-            <span>실행 주기</span>
+            <span class="cycle-in-j2">실행 주기</span>
             <input type="radio" id="cy1" name="cy-radio">
             <label for="cy1">사용 중</label>
-            <input type="radio" id="cy2" name="cy-radio">
-            <label for="cy2">크론</label>
+            <span class="cycle-in2-j2">
+              <input type="radio" id="cy2" name="cy-radio">
+              <label for="cy2">크론</label>
+            </span>
             <input type="text" class="cycle-text">
           </div>
         </section>
