--- a/account06.html
+++ b/account06.html
@@ -117,9 +117,9 @@
             <div class="text-box-a5">
               <div class="text-boxin-a5">
                 <p class="box1">송금 작업명</p>
-                <input type="text">
+                <input type="text" value="20180903-1434-001 ">
                 <p class="box2">송금 패스워드</p>
-                <input type="password">
+                <input type="password" value="123123123">
                 <div class="bcx-a5">
                   <p class="box3">내 계정 잔액</p>
                   <input type="text" value="10,000,000,000">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="bcx-a5">
                   <p class="box4">1인당 송금 금액 (1인당 최대 9,900BCX송금 가능)</p>
-                  <input type="text">
+                  <input type="text" value="100">
                   <span class="bcx-in-a5">BCX</span>
                 </div>
                 <p class="other-a5">* 송금 수수료: -% of -BCX</p>
