--- a/account07.html
+++ b/account07.html
@@ -113,27 +113,31 @@
               </tbody>
             </table>
           </section>
-          <section class="text-a5">
-            <div class="text-box-a5">
-              <div class="text-boxin-a5">
+          <section class="text-a7">
+            <div class="text-box-a7">
+              <div class="text-boxin-a7">
                 <p class="box1">송금 작업명</p>
-                <input type="text">
+                <input type="text" value="20180903-1434-001 ">
+                <p class="wrong-a7">*다른 이름으로 설정하세요.</p>
                 <p class="box2">송금 패스워드</p>
-                <input type="password">
-                <div class="bcx-a5">
+                <input type="password" value="123123123">
+                <p class="wrong-a7">*정확한 패스워드를 다시 입력하세요.</p>
+                <div class="bcx-a7">
                   <p class="box3">내 계정 잔액</p>
                   <input type="text" value="10,000,000,000">
-                  <span class="bcx-in-a5">BCX</span>
+                  <span class="bcx-in-a7">BCX</span>
                 </div>
-                <div class="bcx-a5">
+                <div class="bcx-a7">
                   <p class="box4">1인당 송금 금액 (1인당 최대 9,900BCX송금 가능)</p>
-                  <input type="text">
-                  <span class="bcx-in-a5">BCX</span>
+                  <input type="text" value="100">
+                  <span class="bcx-in-a7">BCX</span>
                 </div>
-                <p class="other-a5">* 송금 수수료: -% of -BCX</p>
-                <div class="go-btn-a5">
-                  <button class="gogo-a5">실행</button>
+                <p class="other-a7">* 송금 수수료: -% of -BCX</p>
+                <p class="wrong-a7">*유효한 금액을 다시 입력하세요.</p>
+                <div class="go-btn-a7">
+                  <button class="gogo-a7">실행</button>
                 </div>
+                <p class="wrong-a7 bottom-a7">*송금 작업을 시작하지 못했습니다.<br>&nbsp;다시 시도해 주세요.</p>
               </div>
             </div>
           </section>
